add descriptions to pages

--- a/page1.html
+++ b/page1.html
@@ -51,8 +51,8 @@
     <!-- https://developers.google.com/recaptcha/docs/display-->
     <div class="box">
 
-        reCAPTCHA v2
-        "I'm not a robot" tickbox
+
+        To authenticate yourself, please complete the Google reCAPTCHA v2 "I'm not a robot" tickbox.
 
     </div>
 
