--- a/page2.html
+++ b/page2.html
@@ -26,8 +26,7 @@
 
 <div class="box">
 
-reCAPTCHA v2
-Invisible reCAPTCHA badge
+To authenticate yourself, please complete the Google reCAPTCHA v2 Invisible reCAPTCHA badge by selecting the button below.
   
 </div>
 
