--- a/page4.html
+++ b/page4.html
@@ -24,7 +24,7 @@ https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
 
-Google Form with Math Equation to vet any audio settings
+To authenticate yourself, please complete the math equation in the Google Form below.
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkxlHbCc1UrcIIcZUftOKkPOU2VGwWJVU34umMdNaUUfD0kQ/viewform?usp=sf_link" target="_blank">Link to Google Form</a>
 
